body overflow css fix

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,5 @@
 .app {
+  background-color: white;
   a {
     color: inherit;
     text-decoration: none;
@@ -64,7 +65,7 @@
     padding: 35px 15px 15px;
     margin: 0 auto;
     background-color: #ffffff;
-    height: calc(100vh - 135px);
+    height: calc(100vh - 145px);
     margin-top: 90px;
     border-top-right-radius: 30px;
     border-top-left-radius: 30px;
